# FiatShamirAuthentication

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
Parties/: CentralAuthority.cpp  CentralAuthority.h  User.cpp  User.h  Utils.cpp  Utils.h
